# MACS

./: .env.example  .gitignore  BENCHMARK.md  CHANGELOG.md  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Dockerfile  ERP_AI_COPILOT_15DAY_PLAN.md  GITHUB_PROFILE.md  INTERVIEW_OPENING.md  JOB_APPLICATION_BLURB.md  LANDING_PAGE.md  MACS_ROADMAP.md  Makefile  PROJECT_PITCH.md  README.en.md  README.md  README_HF.md  RELEASE_NOTES_v1.0.0.md  RELEASE_NOTES_v1.0.1.md  RESUME_PROJECT_DESCRIPTION.md  ROADMAP_AUDIT_v1.0.1.md  SECURITY.md  SKILLS_LEARN.md  SPEC.md  STARTUP.md  agent_process_demo.py  app.py  demo_server.py  docker-compose.yml  my_project.py  pyproject.toml  requirements.txt  requirements_hf.txt  research_assistant_demo.py  research_results.txt  test_3_agent.py  web_demo.py
.github/RELEASE_TEMPLATE/: v1.0.1.md
.github/workflows/: ci.yml  erp-copilot.yml  release.yml
career/: BOSS_QUICK_PITCH.md  COVER_LETTER.md  DEMO_URL_CHEATSHEET.md  INTERVIEW_CHEATSHEET.md  JOB_HUNTING_TRACKER.md  OUTREACH_PLAYBOOK.md  OUTREACH_TEMPLATES.md  PROFILE_KIT.md  REACT_DASHBOARD_DECISION.md  RESUME.md  RESUME_CHECKLIST.md  RESUME_GAN_KAIFENG.md  RESUME_GAN_KAIFENG_OPTIMIZED.md  RESUME_PROJECT_HIRING.md  build_resume_pdf.py
deploy/: prometheus.yml
docs/: ARCHITECTURE.md  BENCHMARK.md  DEPLOY_ONLINE_DEMO.md  GITHUB_RELEASE_GUIDE.md  README.md  RECORDING_GUIDE.md
docs/architecture/: ADR-001-async-python.md  ADR-002-llm-provider-abstraction.md  ADR-003-sql-safety-guardrail.md  ADR-004-hybrid-retrieval.md  ADR-005-self-correction-backoff.md  ADR-006-conversation-cap.md  ADR-007-readonly-default.md  ADR-008-proactive-rag.md  ADR_INDEX.md  ARCHITECTURE_DIAGRAM.md  COLLABORATION_MODES.md  erp_copilot.md
docs/demos/: 03_rag_animation.html
docs/interview/: INTERVIEW_QA_BANK.md  INTERVIEW_REVERSE_QA.md  INTERVIEW_SCORING_RUBRIC.md  INTERVIEW_SELF_INTRO.md  INTERVIEW_TECH_DEMO.md
docs/marketing/: BILIBILI_VIDEO_INTRO.md  GITHUB_RELEASE_TWEET.md  JUEJIN_TECH.md  LINKEDIN_POST.md  ZHIHU_STORY.md
docs/use_cases/: erp_ai_copilot.md  erp_ai_copilot_multi_agent.md  erp_knowledge_assistant.md
docs/videos/: 01_single_agent_script.md  02_multi_agent_script.md  03_rag_script.md  03_rag_transcript.md  DEMO_3MIN_FINAL.md  DEMO_3MIN_SCRIPT.md  HIRING_DEMO_SCRIPT.md  POST_RECORDING_CHECKLIST.md  README_VIDEO_REPLACE.md  RECORDING_CHECKLIST.md
document/: MACS-P0优化记录-20250611.md
examples/: README.md  demo_for_client.py  erp_copilot_multi_agent.py  erp_copilot_single_agent.py  erp_knowledge_assistant.py  interview_demo.py  interview_qa.py  quickstart_5min.py  rag_example.py  scenario_01_low_stock.py  scenario_02_purchase_return.py  scenario_03_text2sql.py  scenario_04_supplier_perf.py
examples/demo/: gradio_demo.py
macs_pkg/: __init__.py  _compat.py
macs_pkg/agents/: __init__.py  executor.py  planner.py  reviewer.py  tool_agent.py
macs_pkg/collaboration/: __init__.py  base.py  decentralized.py  deep_research.py  dynamic_selector.py  hierarchical.py  pipeline.py
macs_pkg/core/: __init__.py  agent.py  agent_template.py  aggregator.py  citation.py  context.py  message.py  react_agent.py  router.py  utils.py
macs_pkg/erp/: __init__.py  health.py  nl2sql.py
macs_pkg/examples/: __init__.py  code_generation.py  full_demo.py  llm_integration_example.py  (+3 more)
scripts/: deploy_hf_pack.ps1  push_to_hf.ps1  record_demo_3min.py  record_demo_ascii.sh  record_video_01.py  record_video_02.py  record_video_03.py  seed_erp_db.py
tests/: conftest.py  test_chinese_embedder.py  test_citation.py  test_collaboration.py  test_deep_research.py  test_e2e_workflow.py  test_erp_copilot_agent.py  test_erp_db.py  test_erp_health.py  test_erp_mcp.py  test_erp_rag.py  test_erp_templates.py  test_erp_web.py  test_executor_agent.py  test_inventory_workflow.py  test_nl2sql.py  test_nl2sql_safety.py  test_planner_agent.py  test_providers.py  test_rag_engine.py  test_react_agent.py  test_reviewer_agent.py  test_tool_agent.py  test_tools.py  test_v101_fixes.py
(+126 files in other folders)
